Archive2/a7/7d6926ce7ff60b/output
main.cpp:4:5: error: member reference base type 'double' is not a structure or union
   t.access();
   ~^~~~~~~
main.cpp:23:5: note: in instantiation of function template specialization 'f<double>' requested here
    f(1.);
    ^
1 error generated.
